<resources>
    <string name="app_name">MoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">overview:</string>
    <string name="original_language">original language:</string>
    <string name="release_date">release date:</string>
    <string name="data_not_found">Data not found</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="try_again">Try Again</string>
</resources>